--- a/joy_20121011_client/res/layout/sousuojieguo.xml
+++ b/joy_20121011_client/res/layout/sousuojieguo.xml
@@ -45,11 +45,11 @@
 <LinearLayout
     android:id="@+id/sousuojieguo_lin2"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="45dp"
     android:orientation="horizontal" 
     android:background="@color/black"
     android:layout_marginTop="5dp"
-    android:layout_marginLeft="5dp"
+    android:gravity="center_vertical"
     >
 <EditText
     android:id="@+id/sousuojieguo_edit"
@@ -60,14 +60,19 @@
      android:layout_weight="1"
      android:paddingLeft="15dp"
      android:drawableLeft="@drawable/edittext_search_image"
+     android:background="@drawable/editbg"
+     android:textColor="@color/white"
      /> 
 <Button
     android:layout_alignParentRight="true"
     android:layout_marginRight="10dp"
+    android:layout_marginLeft="5dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/sousuojieguo_sousuo" 
     android:text="@string/sousuo"
+    android:background="@drawable/btn_sousuo"
+    android:textColor="@color/white"
     />
 </LinearLayout>
 
