--- a/joy_20121011_client/res/layout/activity03.xml
+++ b/joy_20121011_client/res/layout/activity03.xml
@@ -23,7 +23,7 @@
 <Button
     android:layout_alignParentRight="true"
     android:layout_marginRight="10dp"
-    android:layout_width="wrap_content"
+    android:layout_width="65dp"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
     android:id="@+id/act03_xiaoxi" 
@@ -48,8 +48,6 @@
     android:layout_height="fill_parent"
     android:fadingEdge="none"
     android:cacheColorHint="#00000000"
-    android:divider="@color/white"
-    android:dividerHeight="1dp"
     android:scrollbars="none"
     >
 </ListView>
