--- a/joy_20121011_client/res/layout/activity04.xml
+++ b/joy_20121011_client/res/layout/activity04.xml
@@ -19,10 +19,10 @@
 	android:textColor="@color/white" /> 
 <Button 
 	 android:id="@+id/act04_shezhi"
-	 android:layout_width="wrap_content" 
+	 android:layout_width="65dp" 
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
-     android:layout_marginRight="5dp"
+     android:layout_marginRight="10dp"
      android:text="@string/shezhi"
      android:onClick="Btn_shezhi"
      android:layout_centerVertical="true"
@@ -57,7 +57,7 @@
     android:id="@+id/act04_beijing"
     android:layout_width="fill_parent"
     android:layout_height="150dp"
-    android:background="@color/red"
+    android:background="@drawable/zhuyebg"
     android:scaleType="centerInside"
     />
 
@@ -65,7 +65,7 @@
     android:layout_below="@id/act04_beijing"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" 
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="20dp"
     android:id="@+id/act04_rel"
     android:layout_gravity="center"
     >
@@ -128,26 +128,37 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" 
     android:gravity="center"
-    android:layout_marginTop="15dp"
+    android:layout_marginTop="17dp"
     android:id="@+id/act04_linear"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     >
 <Button
     android:id="@+id/act04_kanguodeyingpian"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/kanguodeyingpian"
+    android:background="@drawable/btn_topleft"
+    android:textColor="@color/white"
+    android:layout_weight="1"
     />
 <Button
     android:id="@+id/act04_shoucangdeyingpian"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/shoucangdeyingpian"
+    android:textColor="@color/white"
+    android:background="@drawable/btn_topbar"
+    android:layout_weight="1"
     />
 <Button
     android:id="@+id/act04_tuijiandeyingpian"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/tuijiandeyingpian"
+    android:textColor="@color/white"
+    android:background="@drawable/btn_topright"
+    android:layout_weight="1"
     />
 </LinearLayout>
 
@@ -179,7 +190,7 @@
     android:id="@+id/act04_hand"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/head" 
+    android:background="@drawable/head"
     android:layout_marginTop="130dp"
     android:layout_marginLeft="10dp"
     />
@@ -190,7 +201,7 @@
     android:text="Joyce"
     android:textColor="@color/white"
     android:textSize="25sp"
-    android:layout_marginTop="120dp"
+    android:layout_marginTop="130dp"
     android:layout_marginLeft="20dp"
     />
 </RelativeLayout>
