--- a/joy_20121011_client/res/layout/shezhi.xml
+++ b/joy_20121011_client/res/layout/shezhi.xml
@@ -57,6 +57,8 @@
             android:gravity="center_vertical"
             android:clickable="true"
             android:onClick="Btn_zhuxiao"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/preference_single_item" >
             <TextView
         		android:layout_width="wrap_content" 
@@ -67,13 +69,6 @@
         		android:text="@string/zhuxiao"
         		android:textSize="17sp"		
 				android:textColor="@color/black" /> 
-			<ImageView
-            	android:layout_width="wrap_content"
-        		android:layout_height="wrap_content"        	     	
-        		android:scaleType="matrix"
-        		android:layout_centerVertical="true"
-        		android:layout_alignParentRight="true"
-        		android:src="@drawable/mm_submenu" />      					
    		</RelativeLayout>
    		
 <RelativeLayout      				    
@@ -83,6 +78,8 @@
             android:gravity="center_vertical"
             android:clickable="true"
             android:onClick="Btn_chazhao"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/preference_single_item" >
             <TextView
         		android:layout_width="wrap_content" 
@@ -93,13 +90,6 @@
         		android:text="@string/chazhaotianjia"
         		android:textSize="17sp"		
 				android:textColor="@color/black" /> 
-			<ImageView
-            	android:layout_width="wrap_content"
-        		android:layout_height="wrap_content"        	     	
-        		android:scaleType="matrix"
-        		android:layout_centerVertical="true"
-        		android:layout_alignParentRight="true"
-        		android:src="@drawable/mm_submenu" />      					
    		</RelativeLayout>
    		
 <TextView 
@@ -119,6 +109,8 @@
             android:gravity="center_vertical"
             android:clickable="true"
             android:onClick="Btn_yijianfankui"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/preference_single_item" >
             <TextView
         		android:layout_width="wrap_content" 
@@ -129,13 +121,6 @@
         		android:text="@string/yijianfankui"
         		android:textSize="17sp"		
 				android:textColor="@color/black" /> 
-			<ImageView
-            	android:layout_width="wrap_content"
-        		android:layout_height="wrap_content"        	     	
-        		android:scaleType="matrix"
-        		android:layout_centerVertical="true"
-        		android:layout_alignParentRight="true"
-        		android:src="@drawable/mm_submenu" />      					
    		</RelativeLayout>
 
 <RelativeLayout      				    
@@ -145,6 +130,8 @@
             android:gravity="center_vertical"
             android:clickable="true"
             android:onClick="Btn_guanyuwomen"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/preference_single_item" >
             <TextView
         		android:layout_width="wrap_content" 
@@ -155,12 +142,5 @@
         		android:text="@string/guanyuwomen"
         		android:textSize="17sp"		
 				android:textColor="@color/black" /> 
-			<ImageView
-            	android:layout_width="wrap_content"
-        		android:layout_height="wrap_content"        	     	
-        		android:scaleType="matrix"
-        		android:layout_centerVertical="true"
-        		android:layout_alignParentRight="true"
-        		android:src="@drawable/mm_submenu" />      					
    		</RelativeLayout>
 </LinearLayout>
