--- a/joy_20121011_client/res/layout/supplementaryinformation.xml
+++ b/joy_20121011_client/res/layout/supplementaryinformation.xml
@@ -4,17 +4,11 @@
     android:layout_height="fill_parent" 
     android:background="#333333"
     >
-<LinearLayout 
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    >
 <RelativeLayout
     android:layout_width="fill_parent"
   	android:layout_height="wrap_content"
   	android:id="@+id/title" 
-  	android:background="@color/blue"
-  	android:gravity="center_vertical" 
+  	android:background="@drawable/title"
     >
 <TextView
      android:layout_width="wrap_content" 
@@ -31,15 +25,23 @@
      android:layout_centerVertical="true"
      android:layout_marginRight="5dp"
      android:text="完成"
+     android:background="@drawable/btn_top_right"
+     android:textColor="@color/white"
 	/>
 </RelativeLayout>
+<LinearLayout 
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:layout_below="@id/title"
+    >
 <TextView
-    android:layout_width="wrap_content" 
+    android:layout_width="fill_parent" 
     android:layout_height="wrap_content"
     android:text="@string/imformation"
-    android:textSize="15sp"
+    android:textSize="20sp"
     android:textColor="@color/white" 
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="25dp"
     android:layout_marginLeft="15dp"
     />
 	<EditText 
@@ -48,11 +50,14 @@
 	    android:layout_height="wrap_content"
 	    android:textColor="#000"
 	    android:textSize="15sp"
-	    android:layout_marginTop="25dp"
-	    android:layout_marginLeft="20dp"
-	    android:layout_marginRight="20dp"
+	    android:layout_marginTop="10dp"
+	    android:layout_marginLeft="10dp"
+	    android:layout_marginRight="10dp"
+	    android:paddingLeft="10dp"
+	    android:paddingRight="10dp"
 	    android:singleLine="true"
-	    android:hint="@string/imformation_name"/>
+	    android:hint="@string/imformation_name"
+	    android:background="@drawable/ic_preference_first_normal"/>
 	<EditText 
 	    android:id="@+id/imformation_email"
 	    android:layout_width="fill_parent"
@@ -60,11 +65,13 @@
 	    android:layout_below="@+id/imformation_name"
 	    android:textColor="#000"
 	    android:textSize="15sp"
-	    android:layout_marginTop="25dp"
-	    android:layout_marginLeft="20dp"
-	    android:layout_marginRight="20dp"
+	    android:layout_marginLeft="10dp"
+	    android:layout_marginRight="10dp"
+	    android:paddingLeft="10dp"
+	    android:paddingRight="10dp"
 	    android:singleLine="true"
-	    android:hint="@string/imformation_email"/>
+	    android:hint="@string/imformation_email"
+	    android:background="@drawable/ic_preference_normal"/>
 	<EditText 
 	    android:id="@+id/imformation_password"
 	    android:layout_width="fill_parent"
@@ -72,11 +79,13 @@
 	    android:layout_below="@+id/imformation_name"
 	    android:textColor="#000"
 	    android:textSize="15sp"
-	    android:layout_marginTop="25dp"
-	    android:layout_marginLeft="20dp"
-	    android:layout_marginRight="20dp"
+	    android:layout_marginLeft="10dp"
+	    android:layout_marginRight="10dp"
+	    android:paddingLeft="10dp"
+	    android:paddingRight="10dp"
 	    android:password="true"
 	    android:singleLine="true"
+	    android:background="@drawable/ic_preference_last_normal"
 	    android:hint="@string/imformation_password"/>
 </LinearLayout>
 </RelativeLayout>
