--- a/joy_20121011_client/res/layout/tongxunlunlist.xml
+++ b/joy_20121011_client/res/layout/tongxunlunlist.xml
@@ -42,8 +42,10 @@
 
 <LinearLayout
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/grey"
+    android:layout_height="45dp"
+    android:orientation="horizontal" 
+    android:background="@color/black"
+    android:gravity="center_vertical"
     >
 <EditText
      android:layout_width="wrap_content" 
@@ -52,15 +54,19 @@
      android:id="@+id/tongxunlu_sousuo"
      android:layout_centerVertical="true"
      android:layout_weight="1"
+     android:background="@drawable/editbg"
+     android:textColor="@color/white"
+     android:paddingLeft="10dp"
      /> 
 <Button
-    android:layout_alignParentRight="true"
-    android:layout_marginLeft="10dp"
+    android:layout_marginLeft="5dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/sousuo"
     android:onClick="Btnsousuo"
+    android:textColor="@color/white"
     android:layout_centerVertical="true"
+    android:background="@drawable/btn_sousuo"
     />
 </LinearLayout>
 
@@ -74,26 +80,31 @@
     />
 <LinearLayout
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/grey"
+    android:layout_height="45dp"
+    android:orientation="horizontal" 
+    android:background="@color/black"
+    android:gravity="center_vertical"
     >
 <EditText
-     android:layout_width="wrap_content" 
+    android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
-     android:layout_marginTop="5dp"
-     android:id="@+id/tongxunlu_phone"
-     android:inputType="number"
      android:hint="@string/dianhuahaoma"
+     android:id="@+id/tongxunlu_phone"
+     android:layout_centerVertical="true"
      android:layout_weight="1"
+     android:background="@drawable/editbg"
+     android:textColor="@color/white"
+     android:paddingLeft="10dp"
      /> 
 <Button
-    android:layout_alignParentRight="true"
-    android:layout_marginLeft="10dp"
+    android:layout_marginLeft="5dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/send"
     android:onClick="BtnSend"
+    android:textColor="@color/white"
     android:layout_centerVertical="true"
+    android:background="@drawable/btn_sousuo"
     />
 </LinearLayout>
 <TextView 
