--- a/joy_20121011_client/res/layout/welcome.xml
+++ b/joy_20121011_client/res/layout/welcome.xml
@@ -33,6 +33,8 @@
     android:orientation="horizontal" 
     android:layout_alignParentTop="true"
     android:gravity="center"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     >
 <Button
     android:layout_width="wrap_content"
@@ -77,7 +79,7 @@
 
  <Button
      android:layout_alignParentBottom="true"
-     android:layout_marginBottom="3dp"
+     android:layout_marginBottom="5dp"
      android:id="@+id/welcome_denglu"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" 
