--- a/joy_20121011_client/res/layout/activity03.xml
+++ b/joy_20121011_client/res/layout/activity03.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
     android:orientation="vertical"
-    android:background="#333333"
+    android:background="#1A1A1A"
     >
 <RelativeLayout
     android:layout_width="fill_parent"
@@ -49,6 +49,8 @@
     android:fadingEdge="none"
     android:cacheColorHint="#00000000"
     android:scrollbars="none"
+    android:divider="#313132"
+    android:dividerHeight="1px"
     >
 </ListView>
 </com.joy.view.PullToRefreshView>
