--- a/joy_20121011_client/res/layout/dongtailistview.xml
+++ b/joy_20121011_client/res/layout/dongtailistview.xml
@@ -60,7 +60,18 @@
         android:layout_width="wrap_content"
         android:id="@+id/dongtailistview_img" 
         android:background="@drawable/pic_bg"
+        android:layout_marginTop="5dp"
         />
+    </LinearLayout>
+    
+<RelativeLayout 
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_toRightOf="@id/dongtailistview_head"
+    android:layout_below="@id/dongtailistview_line"
+    android:layout_marginLeft="20dp"
+    android:layout_marginTop="5dp"
+    >
     <TextView 
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
@@ -69,47 +80,17 @@
         android:id="@+id/dongtailistview_time" 
         android:text="time"
         />
-    <EditText 
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/dongtailistview_edit" 
-        android:visibility="gone"
-        />
-    </LinearLayout>
-<!-- <RelativeLayout 
-    	android:layout_height="60dp"
-        android:layout_width="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="15dp"
-        android:layout_toRightOf="@id/dongtailistview_line"
-        android:layout_alignParentBottom="true"
-    >
     
 <TextView 
         android:id="@+id/dongtailistview_how" 
     	android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:textSize="18sp" 
+        android:textSize="15sp" 
         android:textColor="@color/grey"
         android:text="how"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
         android:focusable="true"
     />
-</RelativeLayout> -->
-<TextView 
-        android:id="@+id/dongtailistview_how" 
-    	android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textSize="18sp" 
-        android:textColor="@color/grey"
-        android:text="how"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="15dp"
-        android:layout_marginRight="10dp"
-        android:focusable="true"
-    />
+</RelativeLayout>
 </RelativeLayout>  
 
