--- a/joy_20121011_client/res/layout/drag_list_item_tag.xml
+++ b/joy_20121011_client/res/layout/drag_list_item_tag.xml
@@ -6,7 +6,7 @@
     android:background="#222222">
     
     <TextView
-        android:textColor="@color/white"
+        android:textColor="@color/grey"
        android:id="@+id/drag_list_item_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
