--- a/joy_20121011_client/res/layout/shezhi.xml
+++ b/joy_20121011_client/res/layout/shezhi.xml
@@ -3,7 +3,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical" 
-        android:background="#333333">
+        android:background="#1A1A1A">
 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
