--- a/joy_20121011_client/res/layout/sigle_recomment.xml
+++ b/joy_20121011_client/res/layout/sigle_recomment.xml
@@ -33,7 +33,7 @@
                  android:id="@+id/user_content"
                  android:layout_width="wrap_content"
         		 android:layout_height="wrap_content"
-        		 android:textColor="@color/grey"
+        		 android:textColor="@color/textview"
         		 android:textSize="15sp"
                 />
             <LinearLayout
@@ -57,8 +57,8 @@
 	                 android:id="@+id/user_reply"
 	                 android:layout_width="wrap_content"
 	        		 android:layout_height="wrap_content"
-	        		 android:text="回复"
-	        		 android:textColor="@color/grey"
+	        		 android:text="@string/reply"
+	        		 android:textColor="@color/textview"
 	        		 android:textSize="15sp"
 	        		 android:layout_marginRight="5dp"
 	        		 android:layout_alignParentRight="true"
